--- a/_includes/alerts/covid19.html
+++ b/_includes/alerts/covid19.html
@@ -1,6 +1,6 @@
 <h5 class="alert">
   <p>
-  Due to the recent outbreak of COVID-19, also known as coronavirus, the North Carolina Dental Board has recommended that dental offices close, except for emergency dental treatment, during the current State of Emergency. The Wake County Board of Commissioners has also issued a stay-at-home proclamation for Wake County until April 16, 2020. In order to help protect the health of our patients, staff, and community, we have decided to close our office for any non-emergency treatment until April 17, 2020, at the earliest.
+  Due to the COVID-19 outbreak, also known as coronavirus, the American Dental Association has recommended that dental offices close, except for emergency dental treatment until April 30, 2020. In order to help protect the health of our patients, staff, and community, we have decided to close our office for any non-emergency treatment until April 30, 2020.
   </p>
   <p style="padding: 6px 0px;">
   If you have a dental emergency and need to be seen, please leave a message at <a href="tel:19197836551">(919) 783-6551</a>, or email us at <a href="mailto:{{site.email}}">{{site.email}}</a>. We will be checking those daily.
