--- a/_includes/alerts/covid19.html
+++ b/_includes/alerts/covid19.html
@@ -1,4 +1,4 @@
-<h5 class="alert">
+<h5 class="alert alert-red">
   <p>
   Due to the COVID-19 outbreak and the North Carolina Governor's Stay At Home Order, we have decided to close our office for any non-emergency treatment until May 11, 2020, in order to help protect the health of our patients, staff, and community.
   </p>
