--- a/_includes/alerts/covid19-reopen.html
+++ b/_includes/alerts/covid19-reopen.html
@@ -1,5 +1,5 @@
 <h5 class="alert alert-info">
   <p>
-  Our office is now open and seeing all patients! Check our blog for more information - <a href="{{site.baseurl}}/blog/2020/05/22/covid-19-updates.html" style="color:red;">COVID-19 Updates</a>
+  Check our blog to read our important <a href="{{site.baseurl}}/blog/2020/05/22/covid-19-updates.html" style="color:red;">COVID-19 protocol updates</a> for your upcoming appointment.
   </p>
 </h5>
