--- a/_includes/alerts/covid19.html
+++ b/_includes/alerts/covid19.html
@@ -3,7 +3,7 @@
   Due to the COVID-19 outbreak and the North Carolina Governor's Stay At Home Order, we have decided to close our office for any non-emergency treatment until May 11, 2020, in order to help protect the health of our patients, staff, and community.
   </p>
   <p style="padding: 6px 0px;">
-  If you have a dental emergency and need to be seen, please leave a message at <a href="tel:19197836551">(919) 783-6551</a>, or email us at <a href="mailto:{{site.email}}">{{site.email}}</a>. We will be checking those daily.
+  If you have a dental emergency and need to be seen, please leave a message at <a href="tel:19197836551">{{site.phone}}</a>, or email us at <a href="mailto:{{site.email}}">{{site.email}}</a>. We will be checking those daily.
   </p>
   <p>
   We will be monitoring the situation closely, and will update our website with any new information. We apologize for the inconvenience and thank you for understanding. Please stay safe.
